# ot-harjoitustyo

./: .gitignore  README.md  sound.py
laskarit/viikko1/: gitlog.txt
laskarit/viikko2/maksukortti/: pyproject.toml
laskarit/viikko2/maksukortti/src/: .maksukortti.py.swp
laskarit/viikko2/maksukortti/src/tests/: maksukortti_test.py
laskarit/viikko2/unicafe/src/tests/: kassapaate_test.py  maksukortti_test.py
laskarit/viikko3/: monopoli.drawio  sekvenssikaavio.md  sekvenssikaavio2.md
synthesizerApp/: .coveragerc  .pylintrc  pyproject.toml  sinewave  tasks.py
synthesizerApp/documentation/: Arkkitehtuuri.md  changelog.md  käyttöohje.md  testaus.md  tuntikirjanpito.md  vaatimusmaarittely.md
synthesizerApp/src/: main.py  oscillator.py  sound.py  wavetofile.py
synthesizerApp/src/GUI/: gui.py
synthesizerApp/src/gui/: gui.py  synthgui.py
synthesizerApp/src/synthesizer/: oscillator.py  synthesizer.py
synthesizerApp/src/tests/: synthesizer_test.py
