[tool.poetry]
name = "synthesizerapp"
version = "0.1.0"
description = ""
authors = ["tykov <vaskivuorityko@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8,<3.12"
numpy = "^1.24.2"
scipy = "^1.10.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
